// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestedClaims returns self attested 1`] = `Object {}`;

exports[`requestedClaims returns self attested 2`] = `
Object {
  "name": "Alice",
}
`;

exports[`requestedClaims returns self attested 3`] = `
Object {
  "name": "Alice",
  "nationalId": "xxx0xxxx0xxx",
}
`;

exports[`requestedClaims returns self attested 4`] = `Object {}`;

exports[`requestedClaims returns self attested 5`] = `
Object {
  "name": "Alice Kovan",
}
`;

exports[`requestedClaims returns self attested 6`] = `
Object {
  "name": "Alice Kovan",
  "nationalId": "xxx0xxxx0xxx",
}
`;

exports[`returns all attestations issued by someone 1`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0013.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0015.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 1,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0011.TOKEN",
  },
]
`;

exports[`returns all attestations issued by someone 2`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0013.TOKEN",
  },
]
`;

exports[`returns all attestations matching a claim type and name 1`] = `
Array [
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "token": "0012.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0015.TOKEN",
  },
]
`;

exports[`returns all attestations matching a claim type and name 2`] = `Array []`;

exports[`returns all onlyPendingAndLatestAttestations 1`] = `
Array [
  Object {
    "claimType": "nationalId",
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "options": Object {
      "applicant_id": 1234,
    },
  },
  Object {
    "claimType": "name",
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "options": Object {},
  },
  Object {
    "claimType": "nationalId",
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "issuer": Object {
      "name": "Issuer 2",
    },
    "options": Object {},
  },
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "token": "0013.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "issuer": Object {
      "name": "Issuer 2",
    },
    "token": "0012.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "token": "0015.TOKEN",
  },
]
`;

exports[`returns all onlyPendingAndLatestAttestations 2`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "issuer": Object {
      "name": "Issuer 1",
    },
    "token": "0013.TOKEN",
  },
]
`;

exports[`returns all pendingAttestations 1`] = `
Array [
  Object {
    "claimType": "nationalId",
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "options": Object {
      "applicant_id": 1234,
    },
  },
  Object {
    "claimType": "name",
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "options": Object {},
  },
  Object {
    "claimType": "nationalId",
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "options": Object {},
  },
]
`;

exports[`returns all pendingAttestations 2`] = `Array []`;

exports[`returns allClaims 1`] = `
Object {
  "description": "UX Designer",
  "name": "Alice",
  "nationalId": "xxx0xxxx0xxx",
  "phone": "555-555-5555",
}
`;

exports[`returns allClaims 2`] = `
Object {
  "name": "Alice Kovan",
  "nationalId": "xxx0xxxx0xxx",
  "phone": "555-555-5555",
}
`;

exports[`returns full attestations summary 1`] = `
Object {
  "description": Object {
    "UX Designer": 0,
  },
  "name": Object {
    "Alice": 2,
  },
  "nationalId": Object {
    "xxx0xxxx0xxx": 1,
  },
  "phone": Object {
    "555-555-5555": 1,
  },
}
`;

exports[`returns full attestations summary 2`] = `
Object {
  "name": Object {
    "Alice Kovan": 0,
  },
  "nationalId": Object {
    "xxx0xxxx0xxx": 1,
  },
  "phone": Object {
    "555-555-5555": 1,
  },
}
`;

exports[`returns full ledger 1`] = `
V {
  "C": Hd {
    "j": 65937614,
    "k": null,
    "q": 8192,
  },
  "cb": null,
  "j": 32374988,
  "k": null,
  "p": null,
  "q": 0,
}
`;

exports[`returns full ledger 2`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0013.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "token": "0012.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0015.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 1,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0011.TOKEN",
  },
]
`;

exports[`returns full ledger 3`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0013.TOKEN",
  },
]
`;

exports[`returns ledger with only the latest attestations 1`] = `
V {
  "C": null,
  "cb": [Function],
  "j": 32374988,
  "k": null,
  "p": null,
  "q": 0,
}
`;

exports[`returns ledger with only the latest attestations 2`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0013.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "token": "0012.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0015.TOKEN",
  },
]
`;

exports[`returns ledger with only the latest attestations 3`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
  Object {
    "claim": Object {
      "phone": "555-555-5555",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0013.TOKEN",
  },
]
`;

exports[`returns pendingAttestation for issuer and type 1`] = `
Object {
  "claimType": "nationalId",
  "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
  "options": Object {
    "applicant_id": 1234,
  },
}
`;

exports[`returns pendingAttestation for issuer and type 2`] = `undefined`;

exports[`returns third party attestations summary 1`] = `
Object {
  "name": Object {
    "Alice": 2,
  },
  "nationalId": Object {
    "xxx0xxxx0xxx": 1,
  },
  "phone": Object {
    "555-555-5555": 1,
  },
}
`;

exports[`returns third party attestations summary 2`] = `
Object {
  "nationalId": Object {
    "xxx0xxxx0xxx": 1,
  },
  "phone": Object {
    "555-555-5555": 1,
  },
}
`;

exports[`returns verifiedClaims 1`] = `Array []`;

exports[`returns verifiedClaims 2`] = `
Array [
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "token": "0012.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0015.TOKEN",
  },
]
`;

exports[`returns verifiedClaims 3`] = `
Array [
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "token": "0012.TOKEN",
  },
  Object {
    "claim": Object {
      "name": "Alice",
    },
    "exp": 2,
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0015.TOKEN",
  },
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
]
`;

exports[`returns verifiedClaims 4`] = `Array []`;

exports[`returns verifiedClaims 5`] = `Array []`;

exports[`returns verifiedClaims 6`] = `
Array [
  Object {
    "claim": Object {
      "nationalId": "xxx0xxxx0xxx",
    },
    "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "token": "0014.TOKEN",
  },
]
`;

exports[`returns verifiedClaimsByClaim 1`] = `Object {}`;

exports[`returns verifiedClaimsByClaim 2`] = `
Object {
  "{\\"name\\" \\"Alice\\"}": Array [
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
      "token": "0012.TOKEN",
    },
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "exp": 2,
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "token": "0015.TOKEN",
    },
  ],
}
`;

exports[`returns verifiedClaimsByClaim 3`] = `
Object {
  "{\\"name\\" \\"Alice\\"}": Array [
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
      "token": "0012.TOKEN",
    },
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "exp": 2,
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "token": "0015.TOKEN",
    },
  ],
  "{\\"nationalId\\" \\"xxx0xxxx0xxx\\"}": Array [
    Object {
      "claim": Object {
        "nationalId": "xxx0xxxx0xxx",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "token": "0014.TOKEN",
    },
  ],
}
`;

exports[`returns verifiedClaimsByClaim 4`] = `Object {}`;

exports[`returns verifiedClaimsByClaim 5`] = `Object {}`;

exports[`returns verifiedClaimsByClaim 6`] = `
Object {
  "{\\"nationalId\\" \\"xxx0xxxx0xxx\\"}": Array [
    Object {
      "claim": Object {
        "nationalId": "xxx0xxxx0xxx",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "token": "0014.TOKEN",
    },
  ],
}
`;

exports[`returns verifiedClaimsByType 1`] = `Object {}`;

exports[`returns verifiedClaimsByType 2`] = `
Object {
  "name": Array [
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
      "issuer": Object {
        "name": "Issuer 2",
      },
      "token": "0012.TOKEN",
    },
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "exp": 2,
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "issuer": Object {
        "name": "Issuer 1",
      },
      "token": "0015.TOKEN",
    },
  ],
}
`;

exports[`returns verifiedClaimsByType 3`] = `
Object {
  "name": Array [
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
      "issuer": Object {
        "name": "Issuer 2",
      },
      "token": "0012.TOKEN",
    },
    Object {
      "claim": Object {
        "name": "Alice",
      },
      "exp": 2,
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "issuer": Object {
        "name": "Issuer 1",
      },
      "token": "0015.TOKEN",
    },
  ],
  "nationalId": Array [
    Object {
      "claim": Object {
        "nationalId": "xxx0xxxx0xxx",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "issuer": Object {
        "name": "Issuer 1",
      },
      "token": "0014.TOKEN",
    },
  ],
}
`;

exports[`returns verifiedClaimsByType 4`] = `Object {}`;

exports[`returns verifiedClaimsByType 5`] = `Object {}`;

exports[`returns verifiedClaimsByType 6`] = `
Object {
  "nationalId": Array [
    Object {
      "claim": Object {
        "nationalId": "xxx0xxxx0xxx",
      },
      "iss": "did:ethr:0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "issuer": Object {
        "name": "Issuer 1",
      },
      "token": "0014.TOKEN",
    },
  ],
}
`;

exports[`verifiedClaimsTokens returns verifiedClaimsTokens 1`] = `Array []`;

exports[`verifiedClaimsTokens returns verifiedClaimsTokens 2`] = `
Array [
  "0012.TOKEN",
  "0015.TOKEN",
]
`;

exports[`verifiedClaimsTokens returns verifiedClaimsTokens 3`] = `
Array [
  "0012.TOKEN",
  "0015.TOKEN",
  "0014.TOKEN",
]
`;

exports[`verifiedClaimsTokens returns verifiedClaimsTokens 4`] = `Array []`;

exports[`verifiedClaimsTokens returns verifiedClaimsTokens 5`] = `Array []`;

exports[`verifiedClaimsTokens returns verifiedClaimsTokens 6`] = `
Array [
  "0014.TOKEN",
]
`;
